--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "openai": "^4.61.0",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
@@ -75,9 +76,11 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "together-ai": "0.6.0-alpha.4",
     "uploadthing": "^7.0.1",
     "vaul": "^0.9.3",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zod-to-json-schema": "^3.23.3"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
