--- a/package.json
+++ b/package.json
@@ -57,9 +57,11 @@
     "date-fns": "4.0.0-beta.1",
     "drizzle-orm": "^0.33.0",
     "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^11.5.4",
     "geist": "^1.3.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.441.0",
+    "nanoid": "^5.0.7",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
@@ -69,6 +71,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
     "server-only": "^0.0.1",
